# arr-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PLAN.md  PRD.md  README.md  arr-mcp-backend.spec  docker-compose.yml  justfile  pyproject.toml  run_server.py  start.ps1  stdout.txt
.github/workflows/: ci.yml
native/: .gitignore  Cargo.toml  build-sidecar.ps1  build.ps1  package-lock.json  package.json  tauri.conf.json
native/icons/: icon.icns
native/src/: main.rs
scripts/: generate-tauri-icon.ps1
src/arr_mcp/: __init__.py  __main__.py  api.py  app.py  config.py  constants.py  prefabs.py  server.py  transport.py
src/arr_mcp/schemas/: __init__.py  bazarr.py  common.py  lidarr.py  orchestrate.py  prowlarr.py  radarr.py  readarr.py  sonarr.py
src/arr_mcp/services/: __init__.py  base.py  bazarr_service.py  lidarr_service.py  overseerr_service.py  prowlarr_service.py  radarr_service.py  readarr_service.py  sonarr_service.py
src/arr_mcp/tools/: __init__.py  agentic.py  bazarr_tools.py  cross_arr_tools.py  health_tools.py  help_tools.py  lidarr_tools.py  overseerr_tools.py  prefab_tools.py  prowlarr_tools.py  radarr_tools.py  readarr_tools.py  sonarr_tools.py
src/arr_mcp/utils/: __init__.py  jellyfin_bridge.py
tests/: __init__.py  conftest.py  mock_clients.py  test_agentic.py  test_api.py  test_app.py  test_config.py  test_constants.py  test_cross_arr_tools.py  test_health_tools.py  test_help_tools.py  test_jellyfin_bridge.py  test_schemas.py  test_server.py  test_services.py  test_tools.py  test_transport.py
webapp/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/e2e/: configured-radarr.spec.ts  dashboard.spec.ts  navigation.spec.ts  pages.spec.ts  services.spec.ts  smoke.spec.ts
webapp/src/: App.tsx  index.css  main.tsx
(+20 files in other folders)
